--- a/WebContent/mobileapp_ui5/ToDo.txt
+++ b/WebContent/mobileapp_ui5/ToDo.txt
@@ -1,5 +1,5 @@
 - get a pretty icon
-- refresh detail view (collapsed etc.)
+- refresh detail view (collapsed etc.) XXX
 -formatter for "onTour" (has to work somehow, e. g. within class)
 - on clean triggers search....
 -erro handling searching with empty field etc.
